# Auto-Header

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: dependabot.yaml  mega-linter.yaml  release.yaml  test.yaml
examples/input/: test.ps1  test.py  test.sh  test.yml
examples/reference_output/: test.ps1  test.py  test.sh  test.tf  test.yml
src/auto-header/: main.py
src/auto_header/: __init__.py  core.py  errors.py  main.py
src/auto_header/handlers/: __init__.py  bash.py  powershell.py  python.py  terraform.py  yaml.py
tests/: README.md  __init__.py  test_auto_header.py  test_core.py  utils.py
tests/fixtures/bash/: executable.sh  shebang.sh  simple.sh  with_header.sh  with_settings.sh
tests/fixtures/powershell/: simple.ps1  with_help.ps1  with_requires.ps1
tests/fixtures/python/: future_imports.py  invalid_header.py  shebang.py  simple.py  stub.pyi  with_header.py
tests/fixtures/terrform/: simple.tf  with_header.tf  with_resources.tf
tests/fixtures/yaml/: multi_doc.yaml  simple.yaml  with_frontmatter.yaml  with_marker.yaml
tests/handlers/: __init__.py  test_bash.py  test_python.py
