[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-header"
version = "0.1.0"
description = "A tool to automatically manage file headers in repositories"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pre-commit>=3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
auto-header = "auto_header.main:main"
