[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-header"
version = "0.1.0"
description = "A tool to automatically manage file headers in repositories"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["auto_header"]

[project.dependencies]
typing-extensions = ">=4.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.0"
]

[project.scripts]
auto-header = "auto_header.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
