[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-header"
version = "0.0.1"
description = "A tool to automatically manage file headers in repositories."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license-files = ["LICEN[CS]E.*"]
authors = [
  {name = "Will Lay", email = "laywill@gmail.com"},
]
maintainers = [
  {name = "Will Lay", email = "laywill@gmail.com"}
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 2 - Pre-Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
]
dependencies = [
  "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.0"
]

[project.scripts]
auto-header = "auto_header.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
